fixed swagger docs in good service
also fixed swagger url in order service
